[package]
name = "pith"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generate optimized codebase context for LLMs"
repository = "https://github.com/nzimmerman/pith"
keywords = ["llm", "context", "codemap", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "pith"
path = "src/lib.rs"

[[bin]]
name = "pith"
path = "src/bin/pith.rs"

[dependencies]
thiserror = "1.0"
ignore = "0.4"
tiktoken-rs = "0.6"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
glob = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
